; ModuleID = '/home/carl/AnghaBench/esp-idf/components/pthread/test/extr_test_pthread.c_unlock_mutex.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/pthread/test/extr_test_pthread.c_unlock_mutex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @unlock_mutex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @unlock_mutex(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @pthread_mutex_unlock(i32* %7)
  %9 = sext i32 %8 to i64
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @pthread_exit(i8* %11)
  ret i8* null
}

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @pthread_exit(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
